--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
         <h2>MESON</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="/imagenes/postre del dia.jpg" alt="Postre del dia" width="200" height="200">
+                <img src="./imagenes/postre del dia.jpg" alt="Postre del dia" width="200" height="200">
             </div>
             <div class="gallery-item">
-                <img src="/imagenes/salmon1.jpg" alt="Plato principal" width="200" height="200">
+                <img src="./imagenes/salmon1.jpg" alt="Plato principal" width="200" height="200">
             </div>
             <div class="gallery-item">
-                <img src="/imagenes/images.jpg" alt="bebida del dia" width="200" height="200">
+                <img src="./imagenes/images.jpg" alt="bebida del dia" width="200" height="200">
             </div>
             <div class="gallery-item">
-                <img src="/imagenes/antojjtos.jpg" alt="antojitos" width="200" height="200">
+                <img src="./imagenes/antojjtos.jpg" alt="antojitos" width="200" height="200">
             </div>
             <div class="gallery-item">
-                <img src="/imagenes/chef (1).jpg" alt="antojitos" width="200" height="200">
+                <img src="./imagenes/chef (1).jpg" alt="antojitos" width="200" height="200">
             </div>
         </div>
     </section>
