--- a/menu/platos_fuerte.html
+++ b/menu/platos_fuerte.html
@@ -57,31 +57,31 @@
     <h1>Platos Fuertes</h1>
     <section>
         <article>
-            <img src="/imagenes/pescado.jpg" alt="Pescado">
+            <img src="../imagenes/pescado.jpg" alt="Pescado">
             <h2>Pescado ala diabla</h2>
             <p><em>Filete jugoso acompapañado.</em></p>
             <p><strong>Precio:</strong> Q45.00</p>
         </article>
         <article>
-            <img src="/imagenes/pollo.jpg" alt="Pollo al Horno">
+            <img src="../imagenes/pollo.jpg" alt="Pollo al Horno">
             <h2>Pollo al Horno</h2>
             <p>Pollo asado con especias</p>
             <p><strong>Precio:</strong> Q50.00</p>
         </article>
         <article>   
-            <img src="/imagenes/lasaña.jpg" alt="lasaña">
+            <img src="../imagenes/lasaña.jpg" alt="lasaña">
             <h2>Lasaña</h2>                                                 
             <p>Lasaña con especias aromáticas.</p>
             <p><strong>Precio:</strong> Q42.00</p>
         </article>
         <article>
-            <img src="/imagenes/carrne.jpg" alt="carne">
+            <img src="../imagenes/carrne.jpg" alt="carne">
             <h2>Carne Asada</h2>
             <p>Carne asada con chorizo.</p>
             <p><strong>Precio:</strong> Q80</p>
         </article>
         <article>
-            <img src="/imagenes/adobado.jpg" alt="Adobado">
+            <img src="../imagenes/adobado.jpg" alt="Adobado">
             <h2>Adobado Rojo</h2>
             <p>Adobado rojo con pico de gallo.</p>
             <p><strong>Precio:</strong> Q42.00</p>
@@ -89,5 +89,6 @@
     </section>
     <a href="/index.html">
         <button>Regresar al Inicio</button>
+    </a>
 </body>
 </html>
