--- a/menu/postres.html
+++ b/menu/postres.html
@@ -64,28 +64,28 @@
     <h1>Postres Deliciosos</h1>
     <div class="container">
         <div class="article">
-            <img src="/imagenes/helado.jpg" alt="helado chocolate">
+            <img src="../imagenes/helado.jpg" alt="helado chocolate">
             <h2>Helado Chocolate</h2>
             <p><em>Delicioso helado.</em></p>
             <p><strong>Precio:</strong> Q17.00</p>
         </div>
 
         <div class="article">
-            <img src="/imagenes/galleta.jpg" alt="galleta">
+            <img src="../imagenes/galleta.jpg" alt="galleta">
             <h2>Galleta</h2>
             <p>Galleta de fresas.</p>
             <p><strong>Precio:</strong> Q23.50</p>
         </div>
 
         <div class="article">
-            <img src="/imagenes/tiramisu.jpg" alt="Tiramisú">
+            <img src="../imagenes/tiramisu.jpg" alt="Tiramisú">
             <h2>Tiramisú</h2>
             <p><em>Delicioso tiramisú con café.</em></p>
             <p><strong>Precio:</strong> Q27.00</p>
         </div>
 
         <div class="article">
-            <img src="/imagenes/tostada framcesa.jpg" alt="tostada francesa">
+            <img src="../imagenes/tostada framcesa.jpg" alt="tostada francesa">
             <h2>Tostada Francesa</h2>
             <p><strong>Precio:</strong> Q20.00</p>
         </div>
