--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             <a href="resenias/resenias.html"><button>Comentarios</button></a>
             <a href="recetas/recetas_saladas.php"><button>Recetas Saladas</button></a>
             <a href="recetas/receta_dulce.php"><button>Receta Dulce</button></a>
+            <a href="procesar_reserva"><button>Reserva</button></a>
         </div>
     </nav>
     
